<resources>
    <string name="app_name">Semana09DialogWebViewFirebaseCunya</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario 61</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="valetcorreo">Usuario</string>
    <string name="etclave">Contraseña</string>
    <string name="textbutton">INGRESAR</string>
    <string name="menu_retiro">Retirarse de un curso</string>
    <string name="menu_nsvegador">Navegador</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Rbcurso">Curso</string>
    <string name="Rbciclo">Ciclo</string>
    <string name="txtPag">Ingrese la pagina</string>
    <string name="SbtnVisualizar">VISUALIZAR</string>
</resources>