<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.semana09dialogwebviewfirebasecunya.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_retiro" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.semana09dialogwebviewfirebasecunya.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.semana09dialogwebviewfirebasecunya.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/paginaFragment3"
        android:name="com.example.semana09dialogwebviewfirebasecunya.PaginaFragment"
        android:label="fragment_pagina"
        tools:layout="@layout/fragment_pagina" />
    <fragment
        android:id="@+id/retiroFragment"
        android:name="com.example.semana09dialogwebviewfirebasecunya.RetiroFragment"
        android:label="RetiroFragment" />
</navigation>