<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/loginstud"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="400dp"
        android:layout_height="65dp"
        android:theme="@style/CampoTexto1"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"

       android:layout_margin="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etcorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="12dp"
            android:layout_margin="15dp"
            android:hint="@string/valetcorreo"

            />
    </com.google.android.material.textfield.TextInputLayout>









    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="400dp"
        android:layout_height="65dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:theme="@style/CampoTexto1"
        app:passwordToggleTint="#3AA3F6"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:drawableStart="@drawable/vector_pass"
            android:drawablePadding="12dp"
            android:hint="@string/etclave"

            />
    </com.google.android.material.textfield.TextInputLayout>


















<Space
    android:layout_width="match_parent"
    android:layout_height="68dp"


    ></Space>






    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="@drawable/btn_style"
        android:text="@string/textbutton"
        />
</LinearLayout>